# smarthome-dashboard-simulation

./: .gitignore  README.md  db.env  design.md  generate_events.py  init_data.sql  pyproject.toml  team_norms.md
app/: Makefile  README.md  db.env  db.sql  docker-compose.yml  generate_events.py  init_data.sql  package-lock.json  package.json  prepare_for_demo.sh  pyproject.toml
app/CS499_Senior_Capstone_Project.egg-info/: SOURCES.txt
app/docs/: app_design.md  design.md  pseudocode.md  requirements.md
app/docs/img/: wireframes.drawio
app/public/: app.py  constants.py  index.html  routes.py
app/public/analysis/: AnalysisPublisher.py  BooleanStateTracker.py  DerivedState.py  DerivedStatePublisher.py  Formulas.py  IndoorTempFormulas.py  IndoorTempPublisher.py  OpeningTracker.py  UsageRate.py  UtilityUsage.py  UtilityUsageFormulas.py
app/public/clock/: AppClock.py
app/public/event/: Event.py  EventProcessor.py  EventPublisher.py  EventQueue.py
app/public/events/: Event.py  EventPublisher.py  EventQueue.py  EventStore.py
app/public/measurements/: Measurements.py  MeasurementsPublisher.py
app/public/sse/: DerivedStatePublisher.py  EventPublisher.py  SSEPublisher.py  TimePublisher.py
app/public/time/: AppClock.py  TimePublisher.py
app/src/: App.jsx  App.tsx  AppClock.jsx  EventStream.jsx  SmartHome.jsx  constants.jsx  helpers.jsx  index.css  index.tsx
app/src/CS499_Senior_Capstone_Project.egg-info/: PKG-INFO  SOURCES.txt
app/src/common/: constants.tsx  helpers.tsx  types.tsx
app/src/components/: AnalysisGraph.tsx  AnalysisPage.tsx  AnalysisTable.css  (+14 more)
(+70 files in other folders)
