[project]
name = "Smarthome Dashboard Simulation"
version = "1.0.0"
description = "A webapp simulating a smarthome dashboard"
authors = [
    {name = "Eric Latham", email = "eolatham@uab.edu"}
]
dependencies = [
    "flask~=2.0",
    "apscheduler~=3.7",
    "flask-sse~=1.0",
    "flask-cors~=3.0",
    "typeguard~=2.12",
    "psycopg2-binary~=2.9",
    "meteostat~=1.5",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
[tool.pdm.scripts]
start = "bash -c \"export FLASK_ENV=development; cd public; flask run -h localhost -p 4000;\""
